--- a/mma_gym/templates/base.html
+++ b/mma_gym/templates/base.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'members:members_table' %}">Members</a>
+                        <a class="nav-link" href="{% url 'members_view' %}">Members</a>
                     </li>
                 </ul>
             </div>
