--- a/mma_gym/templates/base.html
+++ b/mma_gym/templates/base.html
@@ -20,6 +20,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'members_view' %}">Members</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'list_memberships' %}">Memberships</a>
+                    </li>
                 </ul>
             </div>
         </div>
